# eskf-baseline

./: .clang-tidy  .clangd  CMakeLists.txt  README.md  main.cpp  package.xml  pyproject.toml
eskf_core/: CLAUDE.md  CMakeLists.txt
eskf_core/include/eskf_baseline/: definitions.hpp  eskf.hpp  eskf_baseline.hpp  inertial_odometry_driver.hpp  outlier_classifier.hpp  stats.hpp
eskf_core/src/: eskf.cpp  outlier_classifier.cpp  stats.cpp
eskf_core/tests/: CMakeLists.txt
eskf_core/tests/src/: fixtures.hpp  test_driver.cpp  test_inertial_odometry_integration.cpp
eskf_ros/: CMakeLists.txt
eskf_ros/config/: default.yaml  loam.yaml
eskf_ros/launch/: eskf.launch.py  loam.launch.py
eskf_ros/src/: eskf_node.cpp  loam_node.cpp
include/eskf_baseline/: eskf_baseline.hpp  inertial_odometry_driver.hpp  math.hpp
loam-baseline/: CMakeLists.txt
loam-baseline/include/loam_baseline/: LidarSlam.h  LocalMap.h  feature_matcher.hpp  irwgn.hpp  keypoint_extractor.hpp  lidar_slam.hpp  observation_models.hpp  pca.hpp
loam-baseline/include/loam_baseline/flann/: nanoflann.h  octree.h
loam-baseline/include/loam_baseline/sensor_data/: LidarPoint.h
loam-baseline/include/loam_baseline/utils/: Utilities.h
loam-baseline/include/loam_classic/: lidarResiduals.hpp
loam-baseline/include/loam_classic/utils/: Twist.h
loam-baseline/src/: LidarSlam.cpp  keypoint_extractor.cpp  lidarResiduals.cpp  lidar_slam.cpp
manifold_baseline/: CMakeLists.txt
manifold_baseline/include/manifold_baseline/: manifold_baseline.hpp
module/: CMakeLists.txt  eskf_baseline.cpp
src/eskf_baseline/: __init__.py  eskf_baseline.py
tests/: conftest.py  test_cpp_conformance.py  test_eskf_math.py  test_rotation_identities.py
tests/cpp/: CMakeLists.txt
tests/cpp/src/: test_driver.cpp  test_inertial_odometry_integration.cpp
tests/python/: test_eskf_math.py
